PA-9627 Update to v2.13 (#8)
* Changed all images to use debian:stable-slim

Signed-off-by: Simon Bennetts <psiinon@gmail.com>

* Build multi-platform Docker images

Also use newer syntax and buildkit features.

Signed-off-by: ricekot <github@ricekot.com>

* Dockerfiles: Use UID with `COPY --chown`

Signed-off-by: ricekot <github@ricekot.com>

* Include the version in add-ons' data dir

Allow to deploy the libraries of the newer version without requiring to
delete the libraries of the older version.

Part of #7589.

Signed-off-by: thc202 <thc202@gmail.com>

* Install Network add-on async through the API

Install asynchronously to return a proper response, as the API is being
served by the add-on which will be uninstalled.

Signed-off-by: thc202 <thc202@gmail.com>

* Allow to restore HttpSenderImpl state

Save and restore the implementation state when changed, to allow to
properly replace the implementations at runtime.
Obtain the contexts when needed to not keep a reference to the
implementation class (with newer implementations), thus not prevent
them from being GC'ed.

Signed-off-by: thc202 <thc202@gmail.com>

* Dockerfiles: Change UID and GID of `zap` user to 1000

Signed-off-by: ricekot <github@ricekot.com>

* Update localized resources

Update resources from Crowdin.

Signed-off-by: zapbot <12745184+zapbot@users.noreply.github.com>

* Update FlatLaf and RSyntaxTextArea

Update FlatLaf to 3.0.
Update RSyntaxTextArea to 3.3.1.

Signed-off-by: thc202 <thc202@gmail.com>

* Update localized resources

Update resources from Crowdin.

Signed-off-by: zapbot <12745184+zapbot@users.noreply.github.com>

* Remove unused Docker files

The files were added years ago to manually test the images.

Signed-off-by: thc202 <thc202@gmail.com>

* Default threads based on available processors

Signed-off-by: Simon Bennetts <psiinon@gmail.com>

* fix gradle error message about wrong @Input annotation

fixes #7679

Signed-off-by: spameier <spameier@users.noreply.github.com>

* Reserve 