@@ -52,9 +52,6 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
-import org.apache.commons.collections.iterators.EnumerationIterator;
-import org.apache.commons.collections.iterators.IteratorChain;
-import org.apache.commons.collections.iterators.IteratorEnumeration;
 import org.apache.commons.configuration.Configuration;
 import org.apache.commons.configuration.ConfigurationException;
 import org.apache.commons.configuration.FileConfiguration;
@@ -72,8 +69,6 @@ import org.parosproxy.paros.view.View;
 import org.zaproxy.zap.Version;
 import org.zaproxy.zap.control.AddOn.AddOnRunRequirements;
 import org.zaproxy.zap.control.AddOn.ExtensionRunRequirements;
-import org.zaproxy.zap.extension.AddOnInstallationStatusListener;
-import org.zaproxy.zap.extension.AddOnInstallationStatusListener.StatusUpdate.Status;
 import org.zaproxy.zap.extension.pscan.PluginPassiveScanner;
 import org.zaproxy.zap.utils.ZapXmlConfiguration;
 
@@ -110,7 +105,6 @@ public class AddOnLoader extends URLClassLoader {
     private Lock installationLock = new ReentrantLock();
     private AddOnCollection aoc = null;
     private List<File> jars = new ArrayList<>();
-
     /**
      * Addons can be included in the ZAP release, in which case the user might not have permissions
      * to delete the files. To support the removal of such addons we just maintain a 'block list' in
@@ -371,15 +365,11 @@ public class AddOnLoader extends URLClassLoader {
         addOnLoaders.put(ao.getId(), addOnClassLoader);
     }
 
-    Class<?> loadClassNoAddOns(String name, boolean resolve) throws ClassNotFoundException {
-        return super.loadClass(name, resolve);
-    }
-
     @Override
-    public Class<?> loadClass(String name, boolean resolve) throws ClassNotFoundException {
+    public Class<?> loadClass(String name) throws ClassNotFoundException {
         synchronized (getClassLoadingLock(name)) {
             try {
-                return super.loadClass(name, resolve);
+                return loadClass(name, false);
             } catch (ClassNotFoundException e) {
                 // Continue for now
             }
@@ -420,18 +410,6 @@ public class AddOnLoader extends URLClassLoader {
             }
         }
         return url;
-    }
-
-    @Override
-    public Enumeration<URL> getResources(String name) throws IOException {
-        IteratorChain urls = new IteratorChain();
-        urls.addIterator(new EnumerationIterator(super.getResources(name)));
-        for (AddOnClassLoader loader : addOnLoaders.values()) {
-            urls.addIterator(new EnumerationIterator(loader.getResources(name)));
-        }
-        @SuppressWarnings("unchecked")
-        Enumeration<URL> result = new IteratorEnumeration(urls);
-        return result;
     }
 
     public AddOnCollection getAddOnCollection() {
@@ -512,14 +490,9 @@ public class AddOnLoader extends URLClassLoader {
             return;
         }
 
-        Control.getSingleton()
-                .getExtensionLoader()
-                .addOnStatusUpdate(new AddOnStatusUpdate(ao, Status.INSTALL, true));
         AddOnInstaller.install(createAndAddAddOnClassLoader(ao), ao);
         ao.setInstallationStatus(AddOn.InstallationStatus.INSTALLED);
-        Control.getSingleton()
-                .getExtensionLoader()
-                .addOnStatusUpdate(new AddOnStatusUpdate(ao, Status.INSTALLED, true));
+        Control.getSingleton().getExtensionLoader().addOnInstalled(ao);
 
         if (runnableAddOns.get(ao) == null) {
             runnableAddOns.put(ao, getRunnableExtensionsWithDeps(reqs));
@@ -667,9 +640,7 @@ public class AddOnLoader extends URLClassLoader {
             removeAddOnClassLoader(ao);
             deleteAddOn(ao, upgrading);
             ao.setInstallationStatus(AddOn.InstallationStatus.UNINSTALLATION_FAILED);
-            Control.getSingleton()
-                    .getExtensionLoader()
-                    .addOnStatusUpdate(new AddOnStatusUpdate(ao, Status.UNINSTALLED, false));
+            Control.getSingleton().getExtensionLoader().addOnUninstalled(ao, false);
             return false;
         }
 
@@ -694,10 +665,6 @@ public class AddOnLoader extends URLClassLoader {
             postponedTasks.addUninstallAddOnTask(ao);
             return false;
         }
-
-        Control.getSingleton()
-                .getExtensionLoader()
-                .addOnStatusUpdate(new AddOnStatusUpdate(ao, Status.UNINSTALL, true));
 
         unloadDependentExtensions(ao);
         softUninstallDependentAddOns(ao);
@@ -724,10 +691,7 @@ public class AddOnLoader extends URLClassLoader {
                         ? AddOn.InstallationStatus.AVAILABLE
                         : AddOn.InstallationStatus.UNINSTALLATION_FAILED);
 
-        Control.getSingleton()
-                .getExtensionLoader()
-                .addOnStatusUpdate(
-                        new AddOnStatusUpdate(ao, Status.UNINSTALLED, uninstalledWithoutErrors));
+        Control.getSingleton().getExtensionLoader().addOnUninstalled(ao, uninstalledWithoutErrors);
         return uninstalledWithoutErrors;
     }
 
@@ -865,9 +829,6 @@ public class AddOnLoader extends URLClassLoader {
             return;
         }
 
-        Control.getSingleton()
-                .getExtensionLoader()
-                .addOnStatusUpdate(new AddOnStatusUpdate(addOn, Status.SOFT_UNINSTALL, true));
         AddOn.InstallationStatus status;
         if (isDynamicallyInstallable(addOn) && AddOnInstaller.softUninstall(addOn, NULL_CALLBACK)) {
             removeAddOnClassLoader(addOn);
@@ -877,14 +838,9 @@ public class AddOnLoader extends URLClassLoader {
         }
 
         addOn.setInstallationStatus(status);
-
         Control.getSingleton()
                 .getExtensionLoader()
-                .addOnStatusUpdate(
-                        new AddOnStatusUpdate(
-                                addOn,
-                                Status.SOFT_UNINSTALLED,
-                                status == AddOn.InstallationStatus.NOT_INSTALLED));
+                .addOnSoftUninstalled(addOn, status == AddOn.InstallationStatus.NOT_INSTALLED);
     }
 
     private void loadBlockList() {
@@ -1038,10 +994,14 @@ public class AddOnLoader extends URLClassLoader {
         return Collections.unmodifiableList(list);
     }
 
-    private static void validateNames(List<AbstractPlugin> scanRules) {
+    private void validateNames(List<?> scanRules) {
         scanRules.forEach(
                 rule -> {
-                    if (StringUtils.isBlank(rule.getName())) {
+                    String name =
+                            rule instanceof AbstractPlugin
+                                    ? ((AbstractPlugin) rule).getName()
+                                    : ((PluginPassiveScanner) rule).getName();
+                    if (StringUtils.isBlank(name)) {
                         LOGGER.log(
                                 Constant.isDevBuild() ? Level.ERROR : Level.WARN,
                                 "Scan rule {} does not have a name.",
@@ -1059,11 +1019,18 @@ public class AddOnLoader extends URLClassLoader {
      * @return an unmodifiable {@code List} with all the passive scan rules, never {@code null}
      * @since 2.4.0
      * @see PluginPassiveScanner
-     * @deprecated (2.15.0) The scan rules are loaded by the corresponding extension.
      */
-    @Deprecated(since = "2.15.0", forRemoval = true)
     public List<PluginPassiveScanner> getPassiveScanRules() {
-        return List.of();
+        ArrayList<PluginPassiveScanner> list = new ArrayList<>();
+        for (AddOn addOn : getAddOnCollection().getAddOns()) {
+            AddOnClassLoader addOnClassLoader = this.addOnLoaders.get(addOn.getId());
+            if (addOnClassLoader != null) {
+                list.addAll(AddOnLoaderUtils.getPassiveScanRules(addOn, addOnClassLoader));
+            }
+        }
+        list.trimToSize();
+        validateNames(list);
+        return Collections.unmodifiableList(list);
     }
 
     /**
@@ -1489,34 +1456,6 @@ public class AddOnLoader extends URLClassLoader {
 
         public List<String> getExtensions() {
             return extensions;
-        }
-    }
-
-    private static class AddOnStatusUpdate implements AddOnInstallationStatusListener.StatusUpdate {
-
-        private final AddOn addOn;
-        private final Status status;
-        private final boolean successful;
-
-        private AddOnStatusUpdate(AddOn addOn, Status status, boolean successful) {
-            this.addOn = addOn;
-            this.status = status;
-            this.successful = successful;
-        }
-
-        @Override
-        public boolean isSuccessful() {
-            return successful;
-        }
-
-        @Override
-        public Status getStatus() {
-            return status;
-        }
-
-        @Override
-        public AddOn getAddOn() {
-            return addOn;
         }
     }
 }
